src/test/deca/context/valid/created/class-one-field.deca
//Description :
// Test de déclaration de classe avec un arguement
//
// Resultats :
// 


class Premiere {
    protected int x = 2;
}

{}
