src/test/deca/context/invalid/created/class-field-bad-int.deca
//Description :
// Test de déclaration de classe avec un argument mal défini
//
// Resultats :
// Erreur


class Premiere {
    boolean x = 3;
}

{}
